--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="controls">
       <div class="controls-container">
 
-        <div id="game-screen-1" class="game-screen active blue">
+        <div id="game-screen-1" class="game-screen blue">
           <h2>Welcome to the Memory Game!</h2>
           <p>Flip over two cards to find matching pairs. If they match, keep them and go again. Keep playing until all pairs are found.</p>
           <p>Ready to test your memory and have fun? Enjoy the challenge! Let's find those pairs!🎴😊</p>
@@ -36,7 +36,8 @@
 
         <div id="game-screen-3" class="game-screen">
           <label class="control-label">Time: <span id="timer">00:00</span></label>
-          <label class="control-label">Num. Moves: <span id="moves-count">0</span></label>
+          <label class="control-label">Game moves: <span id="game-moves">0</span></label>
+          <label class="control-label">Total moves: <span id="total-moves">0</span></label>
         </div>
       </div>
     </div>
